[EDIT] CRUD USER

--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -80,11 +80,9 @@
                         <label>País</label><br>
                         <select name="pais" class="input-fianriel">
                             <option value="">Elegí un país</option>
-                            <% 
-                            let countries = ["Afganistán","Albania","Alemania","Andorra","Angola","Antigua y Barbuda","Arabia Saudita","Argelia","Argentina","Armenia","Australia","Austria","Azerbaiyán","Bahamas","Bangladés","Barbados","Baréin","Bélgica","Belice","Benín","Bielorrusia","Birmania","Bolivia","Bosnia y Herzegovina","Botsuana","Brasil","Brunéi","Bulgaria","Burkina Faso","Burundi","Bután","Cabo Verde","Camboya","Camerún","Canadá","Catar","Chad","Chile","China","Chipre","Ciudad del Vaticano","Colombia","Comoras","Corea del Norte","Corea del Sur","Costa de Marfil","Costa Rica","Croacia","Cuba","Dinamarca","Dominica","Ecuador","Egipto","El Salvador","Emiratos Árabes Unidos","Eritrea","Eslovaquia","Eslovenia","España","Estados Unidos","Estonia","Etiopía","Filipinas","Finlandia","Fiyi","Francia","Gabón","Gambia","Georgia","Ghana","Granada","Grecia","Guatemala","Guyana","Guinea","Guinea ecuatorial","Guinea-Bisáu","Haití","Honduras","Hungría","India","Indonesia","Irak","Irán","Irlanda","Islandia","Islas Marshall","Islas Salomón","Israel","Italia","Jamaica","Japón","Jordania","Kazajistán","Kenia","Kirguistán","Kiribati","Kuwait","Laos","Lesoto","Letonia","Líbano","Liberia","Libia","Liechtenstein","Lituania","Luxemburgo","Madagascar","Malasia","Malaui","Maldivas","Malí","Malta","Marruecos","Mauricio","Mauritania","México","Micronesia","Moldavia","Mónaco","Mongolia","Montenegro","Mozambique","Namibia","Nauru","Nepal","Nicaragua","Níger","Nigeria","Noruega","Nueva Zelanda","Omán","Países Bajos","Pakistán","Palaos","Palestina","Panamá","Papúa Nueva Guinea","Paraguay","Perú","Polonia","Portugal","Reino Unido","República Centroafricana","República Checa","República de Macedonia","República del Congo","República Democrática del Congo","República Dominicana","República Sudafricana","Ruanda","Rumanía","Rusia","Samoa","San Cristóbal y Nieves","San Marino","San Vicente y las Granadinas","Santa Lucía","Santo Tomé y Príncipe","Senegal","Serbia","Seychelles","Sierra Leona","Singapur","Siria","Somalia","Sri Lanka","Suazilandia","Sudán","Sudán del Sur","Suecia","Suiza","Surinam","Tailandia","Tanzania","Tayikistán","Timor Oriental","Togo","Tonga","Trinidad y Tobago","Túnez","Turkmenistán","Turquía","Tuvalu","Ucrania","Uganda","Uruguay","Uzbekistán","Vanuatu","Venezuela","Vietnam","Yemen","Yibuti","Zambia","Zimbabue"]
-                            %>
+                            <% let countries = data %>
                             <% for (const oneCountry of countries) { %>  
-                            <option value="<%= oneCountry %>" <%= locals.oldData && (oneCountry === oldData.pais) ? 'selected' : null %>><%= oneCountry %></option>
+                            <option value="<%= oneCountry.numericCode %>" <%= locals.oldData && (oneCountry.numericCode === oldData.pais) ? 'selected' : null %>><%= oneCountry.name %></option>
                             <% } %>
                         </select>
                         <% if (locals.errors && errors.pais) { %>
@@ -94,24 +92,7 @@
                             </div>  
                             <% } %>
                     </div>
-                    <div>
-                        <label>Provincia</label><br>
-                        <select name="provincia" class="input-fianriel">
-                            <option value="">Elegí una provincia</option>
-                            <option>CABA</option>
-                            <option>Che</option>
-                            <option>Como</option>
-                            <option>hago</option>
-                            <option>esto</option>
-                            <option>dependiente?</option>
-                        </select>
-                        <% if (locals.errors && errors.provincia) { %>
-                            
-                            <div class="text-danger">
-                                <%= errors.provincia.msg %> 
-                            </div>  
-                            <% } %>
-                    </div>
+                    
 
                 </article>
 
