--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -14,23 +14,27 @@
             <section class="section-fianriel">
                 <article class="article-fianriel"> 
                     <div>
+                        <label for="name">Nombre</label> <br>
                         <input placeholder= 'Nombre' name="nombre" type="text" placholder="Tu Nombre" class="input-fianriel" id="name" value="<%= locals.oldData ? oldData.nombre : null  %>"> 
                         <br>                           
                             <small class="text-danger" id="text-danger-name">
                             </small>  
                     </div>
                     <div>
+                        <label for="apellido">Apellido</label><br>
                         <input placeholder= 'Apellido' name="apellido" type="text" placholder="Tu Apellido" class="input-fianriel" id="apellido" value="<%= locals.oldData ? oldData.apellido : null  %>">
                         <br>
                             <div class="text-danger" id="text-danger-last-name">
                             </div>  
                     </div>
                     <div>
+                        <label for="dni">DNI</label><br>
                         <input placeholder= 'DNI' name="dni" type="number" class="input-fianriel" id="dni" value="<%= locals.oldData ? oldData.dni : null  %>">
                         <br>
                             <small class="text-danger" id="text-danger-dni">
                             </small>  
                     </div>
+                    
                 </article>
                 <div class="avatar">
                     <label class="fotoAvatar">Avatar</label><br>
@@ -39,10 +43,11 @@
                     <div class="text-danger" id="text-danger-avatar">
                     </div>  
                 </div>
-                <br>
+                <!-- <br> -->
 
                 <article class="article-fianriel">
                     <div>
+                        <label for="user">Nombre de Usuario</label><br>
                         <input placeholder="Usuario" type="text" name="usuario" class="input-fianriel" id="user" value="<%= locals.oldData ? oldData.usuario : null  %>">
                         <br>
                             <div class="text-danger" id="text-danger-user">
@@ -50,6 +55,7 @@
                     </div>
 
                     <div>
+                        <label for="email">Correo Electrónico</label><br>
                         <input placeholder="Mail" type="email" name="email" class="input-fianriel" id="email" value="<%= locals.oldData ? oldData.email : null  %>">
                         <br>
                             <div class="text-danger" id="text-danger-mail">
@@ -60,12 +66,14 @@
                 <article class="article-fianriel">
 
                     <div>
-                        <input placeholder="Password" type="password" name="clave" id="password">
+                        <label for="password">Password</label><br>
+                        <input placeholder="Password" type="password" class="input-fianriel" name="clave" id="password">
                         <br>
                             <div class="text-danger" id="text-danger-password">
                             </div>  
                     </div>
                     <div>
+                        <label for="repassword">Repetir Password</label><br>
                         <input placeholder="Password" type="password" name="clave2" class="input-fianriel" id="repassword" >
                         <br>
                             <div class="text-danger" id="text-danger-password">
@@ -80,11 +88,9 @@
                         <label>País</label><br>
                         <select name="pais" class="input-fianriel">
                             <option value="">Elegí un país</option>
-                            <% 
-                            let countries = ["Afganistán","Albania","Alemania","Andorra","Angola","Antigua y Barbuda","Arabia Saudita","Argelia","Argentina","Armenia","Australia","Austria","Azerbaiyán","Bahamas","Bangladés","Barbados","Baréin","Bélgica","Belice","Benín","Bielorrusia","Birmania","Bolivia","Bosnia y Herzegovina","Botsuana","Brasil","Brunéi","Bulgaria","Burkina Faso","Burundi","Bután","Cabo Verde","Camboya","Camerún","Canadá","Catar","Chad","Chile","China","Chipre","Ciudad del Vaticano","Colombia","Comoras","Corea del Norte","Corea del Sur","Costa de Marfil","Costa Rica","Croacia","Cuba","Dinamarca","Dominica","Ecuador","Egipto","El Salvador","Emiratos Árabes Unidos","Eritrea","Eslovaquia","Eslovenia","España","Estados Unidos","Estonia","Etiopía","Filipinas","Finlandia","Fiyi","Francia","Gabón","Gambia","Georgia","Ghana","Granada","Grecia","Guatemala","Guyana","Guinea","Guinea ecuatorial","Guinea-Bisáu","Haití","Honduras","Hungría","India","Indonesia","Irak","Irán","Irlanda","Islandia","Islas Marshall","Islas Salomón","Israel","Italia","Jamaica","Japón","Jordania","Kazajistán","Kenia","Kirguistán","Kiribati","Kuwait","Laos","Lesoto","Letonia","Líbano","Liberia","Libia","Liechtenstein","Lituania","Luxemburgo","Madagascar","Malasia","Malaui","Maldivas","Malí","Malta","Marruecos","Mauricio","Mauritania","México","Micronesia","Moldavia","Mónaco","Mongolia","Montenegro","Mozambique","Namibia","Nauru","Nepal","Nicaragua","Níger","Nigeria","Noruega","Nueva Zelanda","Omán","Países Bajos","Pakistán","Palaos","Palestina","Panamá","Papúa Nueva Guinea","Paraguay","Perú","Polonia","Portugal","Reino Unido","República Centroafricana","República Checa","República de Macedonia","República del Congo","República Democrática del Congo","República Dominicana","República Sudafricana","Ruanda","Rumanía","Rusia","Samoa","San Cristóbal y Nieves","San Marino","San Vicente y las Granadinas","Santa Lucía","Santo Tomé y Príncipe","Senegal","Serbia","Seychelles","Sierra Leona","Singapur","Siria","Somalia","Sri Lanka","Suazilandia","Sudán","Sudán del Sur","Suecia","Suiza","Surinam","Tailandia","Tanzania","Tayikistán","Timor Oriental","Togo","Tonga","Trinidad y Tobago","Túnez","Turkmenistán","Turquía","Tuvalu","Ucrania","Uganda","Uruguay","Uzbekistán","Vanuatu","Venezuela","Vietnam","Yemen","Yibuti","Zambia","Zimbabue"]
-                            %>
+                            <% let countries = data %>
                             <% for (const oneCountry of countries) { %>  
-                            <option value="<%= oneCountry %>" <%= locals.oldData && (oneCountry === oldData.pais) ? 'selected' : null %>><%= oneCountry %></option>
+                            <option value="<%= oneCountry.numericCode %>" <%= locals.oldData && (oneCountry.numericCode === oldData.pais) ? 'selected' : null %>><%= oneCountry.name %></option>
                             <% } %>
                         </select>
                         <% if (locals.errors && errors.pais) { %>
@@ -94,43 +100,30 @@
                             </div>  
                             <% } %>
                     </div>
-                    <div>
-                        <label>Provincia</label><br>
-                        <select name="provincia" class="input-fianriel">
-                            <option value="">Elegí una provincia</option>
-                            <option>CABA</option>
-                            <option>Che</option>
-                            <option>Como</option>
-                            <option>hago</option>
-                            <option>esto</option>
-                            <option>dependiente?</option>
-                        </select>
-                        <% if (locals.errors && errors.provincia) { %>
-                            
-                            <div class="text-danger">
-                                <%= errors.provincia.msg %> 
-                            </div>  
-                            <% } %>
-                    </div>
+                    
 
                 </article>
+
 
                 <br>
 
                 <article class="article-fianriel">
                     <div>
+                        <label for="direccion">Dirección</label><br>
                         <input placeholder= 'Dirección' type="text" name="direccion" class="input-fianriel" id="direccion" value="<%= locals.oldData ? oldData.direccion : null  %>">
                         <br>
                             <div class="text-danger" id="text-danger-adress">
                             </div>  
                     </div>
                     <div>
+                        <label for="numero">Número</label><br>
                         <input placeholder= 'Número' type="number" name="numero" class="input-fianriel" id="numero" value="<%= locals.oldData ? oldData.numero : null  %>">
                         <br>
                             <div class="text-danger" id="text-danger-number">
                             </div>  
                     </div>
                     <div>
+                        <label for="cp">Código Postal</label><br>
                         <input placeholder= 'C.P.' type="number" name="cp" class="input-fianriel" id="cp" value="<%= locals.oldData ? oldData.cp : null  %>">
                         <br>
                             <div class="text-danger" id="text-danger-cp">
